unpackaged/main/default/objects/Battery_Test_Result__c/Battery_Test_Result__c.object-meta.xml
<CustomObject>
    <description>Battery Test Results incoming from Battery Test Ap</description>
    <label>Battery Test Result</label>
    <nameField>
        <displayFormat>BTR-{0000}</displayFormat>
        <label>Battery Test Results</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Battery Test Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>