unpackaged/main/default/objects/Battery_Test_Result__c/fields/ACTIVE_INDIC__c.field-meta.xml
<CustomField>
    <fullName>ACTIVE_INDIC__c</fullName>
    <label>ACTIVE_INDIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>