unpackaged/main/default/objects/Battery_Test_Result__c/fields/CALLID__c.field-meta.xml
<CustomField>
    <fullName>CALLID__c</fullName>
    <label>CALLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>