unpackaged/main/default/objects/Battery_Test_Result__c/fields/CALLTESTMODIFIEDDATE__c.field-meta.xml
<CustomField>
    <fullName>CALLTESTMODIFIEDDATE__c</fullName>
    <label>CALLTESTMODIFIEDDATE</label>
    <type>Date</type>
</CustomField>