unpackaged/main/default/objects/Battery_Test_Result__c/fields/CHARGINGSYSTEM__c.field-meta.xml
<CustomField>
    <fullName>CHARGINGSYSTEM__c</fullName>
    <label>CHARGINGSYSTEM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>