unpackaged/main/default/objects/Battery_Test_Result__c/fields/CLUBID__c.field-meta.xml
<CustomField>
    <fullName>CLUBID__c</fullName>
    <label>CLUBID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>