unpackaged/main/default/objects/Battery_Test_Result__c/fields/DECISION__c.field-meta.xml
<CustomField>
    <fullName>DECISION__c</fullName>
    <label>DECISION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>