unpackaged/main/default/objects/Battery_Test_Result__c/fields/DRAINAMPCLAMP__c.field-meta.xml
<CustomField>
    <fullName>DRAINAMPCLAMP__c</fullName>
    <label>DRAINAMPCLAMP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>