unpackaged/main/default/objects/Battery_Test_Result__c/fields/EDS_CA_TESTERDATAEXPORT_KEY__c.field-meta.xml
<CustomField>
    <fullName>EDS_CA_TESTERDATAEXPORT_KEY__c</fullName>
    <label>EDS_CA_TESTERDATAEXPORT_KEY</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>