unpackaged/main/default/objects/Battery_Test_Result__c/fields/EFFECTIVE_DT__c.field-meta.xml
<CustomField>
    <fullName>EFFECTIVE_DT__c</fullName>
    <label>EFFECTIVE_DT</label>
    <type>Date</type>
</CustomField>