unpackaged/main/default/objects/Battery_Test_Result__c/fields/END_DT__c.field-meta.xml
<CustomField>
    <fullName>END_DT__c</fullName>
    <label>END_DT</label>
    <type>Date</type>
</CustomField>