unpackaged/main/default/objects/Battery_Test_Result__c/fields/ETL_BATCH__c.field-meta.xml
<CustomField>
    <fullName>ETL_BATCH__c</fullName>
    <label>ETL_BATCH</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>