unpackaged/main/default/objects/Battery_Test_Result__c/fields/IDLEALTERNATORVOLTAGE__c.field-meta.xml
<CustomField>
    <fullName>IDLEALTERNATORVOLTAGE__c</fullName>
    <label>IDLEALTERNATORVOLTAGE</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>