unpackaged/main/default/objects/Battery_Test_Result__c/fields/MANUFACTURER__c.field-meta.xml
<CustomField>
    <fullName>MANUFACTURER__c</fullName>
    <label>MANUFACTURER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>