unpackaged/main/default/objects/Battery_Test_Result__c/fields/MATCHFOUND__c.field-meta.xml
<CustomField>
    <fullName>MATCHFOUND__c</fullName>
    <label>MATCHFOUND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>