unpackaged/main/default/objects/Battery_Test_Result__c/fields/MEASUREDCCA__c.field-meta.xml
<CustomField>
    <fullName>MEASUREDCCA__c</fullName>
    <label>MEASUREDCCA</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>