unpackaged/main/default/objects/Battery_Test_Result__c/fields/MEASUREDVOLTAGE__c.field-meta.xml
<CustomField>
    <fullName>MEASUREDVOLTAGE__c</fullName>
    <label>MEASUREDVOLTAGE</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>