unpackaged/main/default/objects/Battery_Test_Result__c/fields/ORIGINAL_ETL_BATCH__c.field-meta.xml
<CustomField>
    <fullName>ORIGINAL_ETL_BATCH__c</fullName>
    <label>ORIGINAL_ETL_BATCH</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>