unpackaged/main/default/objects/Battery_Test_Result__c/fields/STARTER__c.field-meta.xml
<CustomField>
    <fullName>STARTER__c</fullName>
    <label>STARTER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>