unpackaged/main/default/objects/Battery_Test_Result__c/fields/STARTERVOLTAGE__c.field-meta.xml
<CustomField>
    <fullName>STARTERVOLTAGE__c</fullName>
    <label>STARTERVOLTAGE</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>