unpackaged/main/default/objects/Battery_Test_Result__c/fields/STATIONID__c.field-meta.xml
<CustomField>
    <fullName>STATIONID__c</fullName>
    <label>STATIONID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>