unpackaged/main/default/objects/Battery_Test_Result__c/fields/STATIONNAME__c.field-meta.xml
<CustomField>
    <fullName>STATIONNAME__c</fullName>
    <label>STATIONNAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>