unpackaged/main/default/objects/Battery_Test_Result__c/fields/TESTDATETIME__c.field-meta.xml
<CustomField>
    <fullName>TESTDATETIME__c</fullName>
    <label>TESTDATETIME</label>
    <type>Date</type>
</CustomField>