unpackaged/main/default/objects/Battery_Test_Result__c/fields/TESTERMODEL__c.field-meta.xml
<CustomField>
    <fullName>TESTERMODEL__c</fullName>
    <label>TESTERMODEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>