unpackaged/main/default/objects/Battery_Test_Result__c/fields/TESTMODIFIEDDATE__c.field-meta.xml
<CustomField>
    <fullName>TESTMODIFIEDDATE__c</fullName>
    <label>TESTMODIFIEDDATE</label>
    <type>Date</type>
</CustomField>