unpackaged/main/default/objects/Battery_Test_Result__c/fields/TESTNUM__c.field-meta.xml
<CustomField>
    <fullName>TESTNUM__c</fullName>
    <label>TESTNUM</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>