unpackaged/main/default/objects/Battery_Test_Result__c/fields/TESTPERFORMED__c.field-meta.xml
<CustomField>
    <fullName>TESTPERFORMED__c</fullName>
    <label>TESTPERFORMED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>