unpackaged/main/default/objects/Battery_Test_Result__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Battery Test Results</relationshipLabel>
    <relationshipName>Battery_Test_Results</relationshipName>
    <type>Lookup</type>
</CustomField>