unpackaged/main/default/objects/Battery_Test_Result__c/listViews/All_Battery_Test_Results.listView-meta.xml
<ListView>
    <fullName>All_Battery_Test_Results</fullName>
    <columns>NAME</columns>
    <columns>Work_Order__c</columns>
    <columns>CALLID__c</columns>
    <columns>DECISION__c</columns>
    <columns>TESTDATETIME__c</columns>
    <columns>TESTPERFORMED__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All Battery Test Results</label>
</ListView>